fix: change acc to comments of reviewer

--- a/index.html
+++ b/index.html
@@ -56,42 +56,51 @@
 
             <div class="gallery">
                 <div class="inner1">
-                    <div class="gallery_row">
+                    <div class="gallery__row">
                         <div class="item">
-                            <div class="item_image"></div>
-                            <div class="item_header">
-                                Article Header
+                            <div class="item__image"></div>
+                            <div class="header__article-text">
+                                <div class="item__header">
+                                    Article Header
+                                </div>
+                                <div class="item__description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                </div>
+                                <div class="item__link">
+                                    <a href="">Read More</a>
+                                </div>
                             </div>
-                            <div class="item_description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                            <div class="item_link">
-                                <a href="">Read More</a>
+                            
+                        </div>
+                        <div class="item">
+                            <div class="item__image"></div>
+                            <div class="header__article-text">
+                                <div class="item__header">
+                                    Article Header
+                                </div>
+                                <div class="item__description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                </div>
+                                <div class="item__link">
+                                    <a href="">Read More</a>
+                                </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="item_image"></div>
-                            <div class="item_header">
-                                Article Header
+                            <div class="item__image"></div>
+                            <div class="header__article-text">
+                                <div class="item__header">
+                                    Article Header
+                                </div>
+                                <div class="item__description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                </div>
+                                <div class="item__link">
+                                    <a href="">Read More</a>
+                                </div>
+
                             </div>
-                            <div class="item_description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                            <div class="item_link">
-                                <a href="">Read More</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item_image"></div>
-                            <div class="item_header">
-                                Article Header
-                            </div>
-                            <div class="item_description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                            <div class="item_link">
-                                <a href="">Read More</a>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
